--- a/days/day004/stylesheets/main.css
+++ b/days/day004/stylesheets/main.css
@@ -1,7 +1,11 @@
+body{
+    min-width: 1200px;
+}
 header{
     width: 100%;
     height: 270px;
     margin: 0px;
+    /*min-width: 1200px;*/
     /* TEST */
     /*background-color: yellow;*/
 }
@@ -113,7 +117,7 @@ header ol li p{
 
 #menu li{
     list-style-type: none;
-    margin-left: 5px;
+    margin: 5px 5px;
 }
 
 #menu tr{
@@ -123,11 +127,21 @@ header ol li p{
 }
 
 #menu td{
-    border: 2px solid yellow;
+    border: 2px solid transparent;
     width: 120px;
 }
 
 #second_level_menu{
+}
+
+#first_level_menu li input{
+    width: 100px;
+    height: 30px;
+}
+
+#second_level_menu li input{
+    width: 100px;
+    height: 25px;
 }
 
 
